Sample Navigation with one Composable acting as multiple Screens, with text in multiple languages Spanish (CO) and English

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">NavegacionAplimovil</string>
+    <string name="home_screen_title">Home Screen</string>
+    <string name="second_screen_title">Second Screen</string>
+    <string name="third_screen_title">Third Screen</string>
+    <string name="bt_next">Next</string>
+    <string name="bt_home">Home</string>
 </resources>
